--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body> 
 Bonjour! <br>
 vous etes sur le site de Malibook, un site est là pour vous aider à vous documenter. <br>
-Nous nous mettons à votre service pour toutes vos commandes de livres. les prix sont abordable pour tous et à tous. 
+Nous nous mettons à votre service pour toutes vos commandes de livres. les prix sont abordable pour tous et à tous.<br>
 Plaisir de vous revoir.
 </body>
 </html>
