--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 Bonjour! <br>
 vous etes sur le site de Malibook, un site est là pour vous aider à vous documenter. <br>
 Nous nous mettons à votre service pour toutes vos commandes de livres. les prix sont abordable pour tous et à tous.<br>
-Plaisir de vous revoir.
+Plaisir de vous revoir. A plus ...
 </body>
 </html>
