--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
  <meta charset="UTF-8">
  <title>malibook.fr</title>
+ <link rel="stylesheet" href="malibook.css">
 </head>
 <body> 
 Bonjour! <br>
