--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body> 
 Bonjour! <br>
-vous etes sur le site de Malibook, un site est là pour vous aider à vous documenter. <br>
+<p>vous etes sur le site de Malibook, un site est là pour vous aider à vous documenter. <br>
 Nous nous mettons à votre service pour toutes vos commandes de livres. les prix sont abordable pour tous et à tous.<br>
-Plaisir de vous revoir. A bientot mes client...
+Plaisir de vous revoir. A bientot mes client...</p>
 
 Bonjour! <br>
 vous etes sur le site de Malibook, un site est là pour vous aider à vous documenter. <br>
